# weather-api

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: api_models.rs  app_state.rs  main.rs  utils.rs  weather_api.rs
src/models/: api.rs  mod.rs  request.rs  state.rs
