[package]
name = "weather-retrieve"
version = "0.1.0"
authors = ["didac"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
env_logger = "0.7"
log = "0.4"

[dev-dependencies]
actix-rt = "1.1"
