[package]
name = "weather-retrieve"
version = "0.9.9"
authors = ["Dídac Sementé Fernández <didac.semente@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.5", default-features = false }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
env_logger = "0.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

[dev-dependencies]
actix-rt = "1.1"
